# project

./: README.md
bvh/: Cargo.toml  README.md
tetra/: CONVENTIONS.md  Cargo.toml  README.md  build.rs
tetra/memos/: git.md  glam.md  glsl.md  winit.md
tetra/memos/vk/: context.md  dynamic_rendering.md  multi_draw_indirect.md
tetra/memos/vk/execution/: commands.md  sync.md
tetra/memos/vk/pipelines/: descriptors.md  graphics_pipeline_states.md  pipelines.md  shaders.md
tetra/memos/vk/resources/: image.md  memory.md
tetra/shaders/: fragment.glsl  fragment.spv  geometry.glsl  geometry.spv  vertex.glsl  vertex.spv
tetra/src/: application.rs  context.rs  handler.rs  main.rs
tetra/src/application/: model.rs  renderer.rs  world.rs
tetra/src/application/model/: add.rs  clouds.rs  create.rs  shapes.rs  surfaces.rs
tetra/src/application/model/clouds/: full.rs  vertex.rs  visible.rs
tetra/src/application/model/shapes/: diic.rs  full.rs  info.rs
tetra/src/application/model/surfaces/: full.rs  triangle.rs  visible.rs
tetra/src/application/renderer/: create.rs  frame_renderer.rs  pipelines.rs  rendering_camera.rs  set_layouts.rs  swapchain.rs
tetra/src/application/renderer/frame_renderer/: create.rs  depth.rs  draw.rs
tetra/src/context/: device.rs  entry.rs  instance.rs
tetra/src/context/device/: cmd_transition_image.rs  create.rs  queues.rs  sync.rs
tetra/src/context/entry/: instance_support.rs
tetra/src/context/instance/: create.rs  physical_device_queue_family_support.rs  physical_device_support.rs
tetra/src/handler/: custom_events.rs  inputs.rs
(+44 files in other folders)
