[package]
name = "tetra"
version = "0.1.0"
edition = "2024"

[build-dependencies]
# GLSL compiler
shaderc = "0.9"

[dependencies]
# Window & Events
winit = "0.30"

# Vulkan
ash = "0.38"
ash-window = "0.13"
vk-mem = "0.4"
vk_utils = { path = "../vk_utils" }

# Flags
bitflags = "2.9"

# Linear algebra
glam = "0.30"

# Memory management
suballocation = { path = "../suballocation" }
mem_utils = { path = "../mem_utils" }